--- a/src/main/resources/Sokoban/Fxml/LoginScene.fxml
+++ b/src/main/resources/Sokoban/Fxml/LoginScene.fxml
@@ -9,10 +9,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="Pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="911.0" stylesheets="@Style/LoginSceneStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Sokoban.Controller.LoginSceneController">
+<AnchorPane fx:id="Pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="911.0" stylesheets="@../Style/LoginSceneStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Sokoban.Controller.LoginSceneController">
    <ImageView fitHeight="660.0" fitWidth="911.0" pickOnBounds="true" preserveRatio="true">
       <image>
-         <Image url="@Sokoban/pictures/SOKOBAN.png" />
+         <Image url="@../Sokoban/pictures/SOKOBAN.png" />
       </image>
    </ImageView>
     <PasswordField fx:id="Input_passwd" layoutX="294.0" layoutY="307.0" promptText="input your password">
