--- a/src/main/resources/Sokoban/Fxml/Level1.fxml
+++ b/src/main/resources/Sokoban/Fxml/Level1.fxml
@@ -17,10 +17,10 @@
    <children>
       <ImageView fitHeight="648.0" fitWidth="919.0" layoutY="-1.0" opacity="0.7" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Sokoban/pictures/Library.png" />
+            <Image url="@../Sokoban/pictures/Library.png" />
          </image>
       </ImageView>
-      <AnchorPane fx:id="Pane" focusTraversable="true" layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#MovePlayer" prefHeight="633.0" prefWidth="911.0" stylesheets="@Style/LevelGame.css">
+      <AnchorPane fx:id="Pane" focusTraversable="true" layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#MovePlayer" prefHeight="633.0" prefWidth="911.0" stylesheets="@../Style/LevelGame.css">
          <children>
             <GridPane fx:id="GridBoard" layoutX="83.0" layoutY="111.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0">
                <columnConstraints>
@@ -72,7 +72,7 @@
             <Button fx:id="Btn_home" layoutX="38.0" layoutY="49.0" mnemonicParsing="false" onMousePressed="#HomeBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
             <ImageView fx:id="Img_home" disable="true" fitHeight="48.0" fitWidth="40.0" layoutX="38.0" layoutY="49.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Sokoban/pictures/home.jpg" />
+                  <Image url="@../Sokoban/pictures/home.jpg" />
                </image>
             </ImageView>
             <Label fx:id="Label_steps" layoutX="677.0" layoutY="50.0" prefHeight="38.0" prefWidth="70.0" text="steps:">
@@ -116,19 +116,19 @@
             </GridPane>
             <ImageView fx:id="Img_Back" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="98.0" layoutY="49.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Sokoban/pictures/back.jpg" />
+                  <Image url="@../Sokoban/pictures/back.jpg" />
                </image>
             </ImageView>
             <Button fx:id="Btn_load" layoutX="156.0" layoutY="49.0" mnemonicParsing="false" onMousePressed="#LoadBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
             <Button fx:id="Btn_save" layoutX="222.0" layoutY="50.0" mnemonicParsing="false" onMousePressed="#SaveBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
             <ImageView fx:id="Img_load" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="156.0" layoutY="48.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Sokoban/pictures/load.jpeg" />
+                  <Image url="@../Sokoban/pictures/load.jpeg" />
                </image>
             </ImageView>
             <ImageView fx:id="Img_save" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="214.0" layoutY="48.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Sokoban/pictures/download.jpg" />
+                  <Image url="@../Sokoban/pictures/download.jpg" />
                </image>
             </ImageView>
          </children>
