--- a/src/main/resources/Sokoban/Fxml/Level2.fxml
+++ b/src/main/resources/Sokoban/Fxml/Level2.fxml
@@ -17,10 +17,10 @@
    <children>
       <ImageView fitHeight="665.0" fitWidth="921.0" opacity="0.7" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Sokoban/pictures/Dorm.jpg" />
+            <Image url="@../Sokoban/pictures/Dorm.jpg" />
          </image>
       </ImageView>
-      <AnchorPane fx:id="Pane" layoutX="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#MovePlayer" prefHeight="633.0" prefWidth="911.0" stylesheets="@Style/LevelGame.css">
+      <AnchorPane fx:id="Pane" layoutX="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#MovePlayer" prefHeight="633.0" prefWidth="911.0" stylesheets="@../Style/LevelGame.css">
          <children>
             <GridPane fx:id="GridBoard" layoutX="80.0" layoutY="123.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="560.0">
                <columnConstraints>
@@ -99,7 +99,7 @@
             <Button fx:id="Btn_home" layoutX="48.0" layoutY="59.0" mnemonicParsing="false" onMousePressed="#HomeBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
             <ImageView fx:id="Img_home" disable="true" fitHeight="60.0" fitWidth="50.0" layoutX="43.0" layoutY="54.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Sokoban/pictures/home.jpg" />
+                  <Image url="@../Sokoban/pictures/home.jpg" />
                </image>
             </ImageView>
             <Button fx:id="Btn_back" layoutX="108.0" layoutY="60.0" mnemonicParsing="false" onMousePressed="#BackBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
@@ -107,17 +107,17 @@
             <Button fx:id="Btn_save" layoutX="232.0" layoutY="60.0" mnemonicParsing="false" onMousePressed="#SaveBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
             <ImageView fx:id="Img_load" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="166.0" layoutY="58.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Sokoban/pictures/load.jpeg" />
+                  <Image url="@../Sokoban/pictures/load.jpeg" />
                </image>
             </ImageView>
             <ImageView fx:id="Img_save" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="232.0" layoutY="58.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Sokoban/pictures/download.jpg" />
+                  <Image url="@../Sokoban/pictures/download.jpg" />
                </image>
             </ImageView>
             <ImageView fx:id="Img_Back" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="108.0" layoutY="59.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Sokoban/pictures/back.jpg" />
+                  <Image url="@../Sokoban/pictures/back.jpg" />
                </image>
             </ImageView>
             <GridPane fx:id="Movement" layoutX="691.0" layoutY="329.0" prefHeight="180.0" prefWidth="180.0">
