--- a/src/main/resources/Sokoban/Fxml/Level5.fxml
+++ b/src/main/resources/Sokoban/Fxml/Level5.fxml
@@ -17,7 +17,7 @@
    <children>
       <ImageView fitHeight="633.0" fitWidth="917.0" opacity="0.7" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@Sokoban/pictures/Health Center.jpg" />
+            <Image url="@../Sokoban/pictures/Health Center.jpg" />
          </image>
       </ImageView>
       <AnchorPane fx:id="Pane" layoutX="-1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#MovePlayer" prefHeight="633.0" prefWidth="911.0">
@@ -104,7 +104,7 @@
             <Button fx:id="Btn_home" layoutX="43.0" layoutY="67.0" mnemonicParsing="false" onMousePressed="#HomeBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
             <ImageView fx:id="Img_home" disable="true" fitHeight="60.0" fitWidth="50.0" layoutX="38.0" layoutY="62.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Sokoban/pictures/home.jpg" />
+                  <Image url="@../Sokoban/pictures/home.jpg" />
                </image>
             </ImageView>
             <Button fx:id="Btn_back" layoutX="94.0" layoutY="66.0" mnemonicParsing="false" onMousePressed="#BackBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
@@ -112,17 +112,17 @@
             <Button fx:id="Btn_save" layoutX="206.0" layoutY="68.0" mnemonicParsing="false" onMousePressed="#SaveBtnPressed" opacity="0.0" prefHeight="38.0" prefWidth="40.0" />
             <ImageView fx:id="Img_load" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="148.0" layoutY="67.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Sokoban/pictures/load.jpeg" />
+                  <Image url="@../Sokoban/pictures/load.jpeg" />
                </image>
             </ImageView>
             <ImageView fx:id="Img_save" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="206.0" layoutY="66.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Sokoban/pictures/download.jpg" />
+                  <Image url="@../Sokoban/pictures/download.jpg" />
                </image>
             </ImageView>
             <ImageView fx:id="Img_Back" disable="true" fitHeight="50.0" fitWidth="40.0" layoutX="94.0" layoutY="67.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Sokoban/pictures/back.jpg" />
+                  <Image url="@../Sokoban/pictures/back.jpg" />
                </image>
             </ImageView>
          </children>
