--- a/src/main/resources/Sokoban/Fxml/Level1.fxml
+++ b/src/main/resources/Sokoban/Fxml/Level1.fxml
@@ -91,7 +91,7 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label fx:id="myTime" layoutX="870.0" layoutY="57.0">
+            <Label fx:id="myTime" layoutX="870.0" layoutY="57.0" prefHeight="32.0" prefWidth="40.0">
                <font>
                   <Font size="24.0" />
                </font>
