--- a/src/main/resources/Sokoban/Fxml/Level2.fxml
+++ b/src/main/resources/Sokoban/Fxml/Level2.fxml
@@ -91,7 +91,7 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label fx:id="myTime" layoutX="762.0" layoutY="173.0">
+            <Label fx:id="myTime" layoutX="762.0" layoutY="173.0" prefHeight="32.0" prefWidth="48.0">
                <font>
                   <Font size="24.0" />
                </font>
