--- a/src/main/resources/Sokoban/Fxml/Level5.fxml
+++ b/src/main/resources/Sokoban/Fxml/Level5.fxml
@@ -96,7 +96,7 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label fx:id="myTime" layoutX="782.0" layoutY="149.0">
+            <Label fx:id="myTime" layoutX="782.0" layoutY="149.0" prefHeight="32.0" prefWidth="40.0">
                <font>
                   <Font size="24.0" />
                </font>
